+axios, +CSS, +CategoryList

--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,51 @@
   border-color: black; */
 }
 
-/* Product List Equipment Page */
-.equipment-list {
-  display: flex;
+/* Category List Page */
+.CategoryList {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
 
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: #472102;
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #472102;
 }
